updated contract + backend

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     
     <div class="container-fluid mt-3">
       <h1>Bobos Smart-Contract Backend</h1>
-      <h4><a href="https://rinkeby.etherscan.io/address/0x17327b822ab6ca02b4c89622c00bb54a112fa903" target="_blank">0x17327b822Ab6Ca02b4c89622C00BB54a112Fa903</a></h4>
+      <h4><a href="https://rinkeby.etherscan.io/address/0xb7f9f07f5643a9ae5ae692949205103419f31179" target="_blank">0xb7f9F07F5643A9AE5aE692949205103419F31179</a></h4>
       <button class="btn btn-md btn-primary mt-2 test-metamask-button">connect</button>
       <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(1)">
         Presale Mint 1
+      </button>
+      <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(2)">
+        Presale Mint 2
       </button>
       <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(3)">
         Presale Mint 3
