removed odd pairs

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="alert"></div>
       <div class="net_version_alert"></div>
     </div>
-    <script src="/dist/main-dgfC.js"></script>
+    <script src="/dist/main-YIWw.js"></script>
     <script>
       //moniter sales changes
 
