--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="alert"></div>
       <div class="net_version_alert"></div>
     </div>
-    <script src="/dist/main-Jf06.js></script>
+    <script src="/dist/main-Jf06.js"></script>
     <script>
       //moniter sales changes
 
