switched to mainnet

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-DmzR.js"></script>
+    <script src="/dist/main-H9ka.js"></script>
     <script>
       //moniter sales changes
 
