alchemy api update

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-6aa1.js"></script>
+    <script src="/dist/main-De0k.js"></script>
     <script>
       //moniter sales changes
 
