txhash redirect link update

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
     
     </div>
-    <script src="/dist/main-xEz1.js"></script>
+    <script src="/dist/main-q3r2.js"></script>
     <script>
       //moniter sales changes
 
