button text to mint update

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-4wGy.js"></script>
+    <script src="/dist/main-2jrL.js"></script>
     <script>
       //moniter sales changes
 
