--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <title>Bobos Smart Contract Backend</title>
+    <title>Cyclops PFP Smart Contract Backend</title>
   </head>
   <body>
     <div class="container-fluid mt-3">
-      <h1>Bobos Smart-Contract Backend</h1>
+      <h1>Cyclops PFP Smart-Contract Backend</h1>
       <h4>
         <a
           href="https://rinkeby.etherscan.io/address/0x019f5629a978bdcb6e26dc164f5922508703f63c"
@@ -40,14 +40,14 @@
       <button class="btn btn-md btn-primary metamask-button-text mt-2 test-metamask-button">
         connect
       </button>
-      <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(1)">
-        Presale Mint 1
+      <button class="btn btn-md btn-primary mt-2" onclick="allowlist_mint(1)">
+        Allowlist Mint 1
       </button>
-      <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(2)">
-        Presale Mint 2
+      <button class="btn btn-md btn-primary mt-2" onclick="allowlist_mint(2)">
+        Allowlist Mint 2
       </button>
-      <button class="btn btn-md btn-primary mt-2" onclick="mintPresale(3)">
-        Presale Mint 3
+      <button class="btn btn-md btn-primary mt-2" onclick="allowlist_mint(3)">
+        Allowlist Mint 3
       </button>
       <button class="btn btn-md btn-primary mt-2" onclick="mintPublic(1)">
         Public Mint 1
@@ -98,7 +98,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-psO9.js"></script>
+    <script src="/dist/main-bZoF.js"></script>
     <script>
       //moniter sales changes
 
