--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-bZoF.js"></script>
+    <script src="/dist/main-hU9S.js"></script>
     <script>
       //moniter sales changes
 
