mintpass ui update and upate to contract v6

--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-UF4e.js"></script>
+    <script src="/dist/main-9Lyr.js"></script>
     <script src="./src/public/javascript/index.var.js"></script>
     <script>
       //moniter sales changes
 
-      // setInterval(() => {
-      //   root();
-      //   pre_sale_status();
-      //   sale_status();
-      // }, 1000);
+      setInterval(() => {
+        root();
+        pre_sale_status();
+        sale_status();
+      }, 1000);
 
-      // walletChanges();
+      walletChanges();
 
       // let state = onboardObj.getState();
 
