--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-7VFU.js"></script>
+    <script src="/dist/main-7fmH.js"></script>
     <script src="./src/public/javascript/index.var.js"></script>
     <script>
       //moniter sales changes
