--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         Connect Wallet to check if you are whitelisted!
       </div>
     </div>
-    <script src="/dist/main-uE4Z.js"></script>
+    <script src="/dist/main-4e2n.js"></script>
     <script src="./src/public/javascript/index.var.js"></script>
     <script>
       //moniter sales changes
