animation status support

--- a/index.html
+++ b/index.html
@@ -100,10 +100,16 @@
       <div class="allow_list_text">
         Connect Wallet to check if you are whitelisted!
       </div>
+      <div class="loading-tnx-status">Pending animation</div>
+      <div class="confirmed-tnx-status">Confirmed tnx</div>
+      <div class="failed-tnx-status">Failed Tnx</div>
     </div>
-    <script src="/dist/main-ZOCx.js"></script>
+    <script src="/dist/main-6VBl.js"></script>
     <script src="./src/public/javascript/index.var.js"></script>
     <script>
+      $(".loading-tnx-status").hide();
+      $(".confirmed-tnx-status ").hide();
+      $(".failed-tnx-status").hide();
       //moniter sales changes
 
       // let state = onboardObj.getState();
