--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="confirmed-tnx-status">Confirmed tnx</div>
       <div class="failed-tnx-status">Failed Tnx</div>
     </div>
-    <script src="/dist/main-upQS.js"></script>
+    <script src="/dist/main-1XdB.js"></script>
     <script src="./src/public/javascript/index.var.js"></script>
     <script>
       $(".loading-tnx-status").hide();
